[package]
name = "parse-dbc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.11"
regex = "1"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"
dbcparser= {path ="../dbcparser"}


[[bin]]
name = "parse-dbc"
path = "src/parse-dbc.rs"
