[package]
name = "dbcparser-cli"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "CLI utilities around dbcparser: parse, validate, query, dump, convert, stats, grep-db"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dbcparser = { path = "../dbcparser" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"


[dev-dependencies]
assert_cmd = "2.0"
