[package]
name = "dbcparser"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
nom = { version = "7", features = ["alloc"] }
heck = "0.4"

[features]
default = []
internal-parser-tests = []

[lib]
name = "dbcparser"
path = "src/lib.rs"

#[[example]]
#name = "model3"
#path = "examples/model3/main.rs"

#[[example]]
#name = "bms"
#path = "examples/bms/main.rs"

[[test]]
name = "tests"
path = "tests/test.rs"
harness = true
required-features = ["internal-parser-tests"]
