[package]
name = "dbcparser"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
nom = { version = "7", features = ["alloc"] }
heck = "0.4"
libc = "0.2"

[features]
default = []
internal-parser-tests = []

[lib]
name = "dbcparser"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"
harness = true
required-features = ["internal-parser-tests"]
