[package]
name = "dbcparser"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
can-dbc = {git="https://github.com/oxibus/can-dbc", branch="v8.0.0"}
heck = "0.4"
libc = "0.2"

[features]
default = []
internal-parser-tests = []

[lib]
name = "dbcparser"
path = "src/lib.rs"
