[package]
name = "can-bms"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json={ version= "1.0", optional = true }
lib_dbcparser= {path ="../../dbcparser"}
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"

[build-dependencies]
lib_dbcparser = { path = "../../dbcparser" }

[[bin]]
name = "can-bms"
path = "src/bms-display.rs"

[[bin]]
name = "can-bms-tui"
path = "src/bms-display-tui.rs"

[features]
default = ["serde","serde_json"]
